Update 'go-gnursqmg' component image to: quay.io/rhtap_qe/go-gnursqmg:6310f8a7860fd2a222fbc4662397c84b644d7782@sha256:37c965f47df79176386793f8bc6f9c70486db1f7f1a1317d28d6c86e2d951b04

--- a/components/go-gnursqmg/overlays/development/deployment-patch.yaml
+++ b/components/go-gnursqmg/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-gnursqmg
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-gnursqmg:6310f8a7860fd2a222fbc4662397c84b644d7782@sha256:37c965f47df79176386793f8bc6f9c70486db1f7f1a1317d28d6c86e2d951b04
+          name: container-image
